--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "scripts": {},
   "dependencies": {
     "react": "18.2.0",
-    "styled-components": "6.0.0-rc.1",
-    "tslib": "2.5.0"
+    "styled-components": "6.1.1",
+    "tslib": "2.6.2"
   },
   "devDependencies": {
-    "@types/react": "18.2.6",
-    "typescript": "5.0.4"
+    "@types/react": "18.2.45",
+    "typescript": "5.3.3"
   }
 }
